# split_spliced_reads

./: CMakeLists.txt  README.md  main.cpp
